Gradle Migration Part Two
Patching and including both the binary and source has been done successfully. The last step is shading this patched library!